resolving some ui

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="navbar">
-    <div class="logo">MyLogo</div>
+    <div class="logo">cw</div>
     
     <input type="checkbox" id="menu-toggle" />
     <label for="menu-toggle" class="menu-icon">&#9776;</label>
@@ -34,13 +34,15 @@
 <div class="appear-content">
         <div class="left-content">
             <div class="contain">
-                    <h1>Kepp your wallet in the most trusted wallet</h1>
+                    <h1>Keep your money in the most trusted wallet</h1>
     <p>Lorem ipsum dolor sit amet, 
         consectetur adipisicing elit. Magni minus ut 
         repellat veniam. Enim optio quia consequatur illum
          similique sunt hic! Itaque at a veritatis, libero
           adipisci beatae vitae assumenda.</p>
+       <input placeholder="Type something here...." class="input" name="text" type="text"/>
           <button>Getstart</button>
+          <!-- From Uiverse.io by Yaseen549 --> 
             </div>
   </div>
   <div class="right-content">
